Commit Changes to Index

--- a/index.qmd
+++ b/index.qmd
@@ -69,3 +69,23 @@ setwd("/Users/jezelei/jezeleii/IS415-GA")
 </a>
 :::
 :::
+
+<hr/>
+
+::: {style="display:flex; align-items:center;"}
+<div>
+
+<h3>Hands-On \n Exercise 02</h3>
+
+<p>Building Block 2: Thematic Mapping & GeoVisualization with R</p>
+
+</div>
+
+::: {style="width: 100%"}
+`<a href="`{=html}https://is415-ga-jezelei.netlify.app/hands-on_exercise/hands-on_ex02/hands-on_ex03`">`{=html}
+
+![](headerImages/Hands-on_Ex03_Header.png){fig-align="right" width="90%"}
+
+</a>
+:::
+:::
