--- a/index.qmd
+++ b/index.qmd
@@ -77,7 +77,7 @@ setwd("/Users/jezelei/jezeleii/IS415-GA")
 
 <h3>Hands-On \n Exercise 03</h3>
 
-<p>Building Block 3: Thematic Mapping & GeoVisualization with R</p>
+<p>Building Block 3: Spatial Point Pattern Analysis</p>
 
 </div>
 
