--- a/Hands-On_Exercise/Hands-on_Ex03/Hands-on_Ex03.qmd
+++ b/Hands-On_Exercise/Hands-on_Ex03/Hands-on_Ex03.qmd
@@ -30,7 +30,7 @@ The specific questions we would like to answer are as follows:
 # 2.0 Data Packages Used
 
 |                       |                                                                                                                                                                                        |
-|--------------------------|----------------------------------------------|
+|--------------|----------------------------------------------------------|
 | `CHILDCARE`           | Point feature data providing both location and attribute information of childcare centres. It was downloaded from Data.gov.sg and is in geojson format.                                |
 | `MP14_SUBZONE_WEB_PL` | Polygon feature data providing information of URA 2014 Master Plan Planning Subzone boundary data. It is in ESRI shapefile format. This data set was also downloaded from Data.gov.sg. |
 | `CostalOutline`       | Polygon feature data showing the national boundary of Singapore. It is provided by SLA and is in ESRI shapefile format.                                                                |
@@ -38,18 +38,17 @@ The specific questions we would like to answer are as follows:
 # 3.0 Installing & Loading R Packages
 
 |                                                                             |                                                                                                                                                                                                                                   |
-|-----------------------|-------------------------------------------------|
+|-------------------|-----------------------------------------------------|
 | [**sf**](https://r-spatial.github.io/sf/)                                   | a relatively new R package specially designed to import, manage and process vector-based geospatial data in R.                                                                                                                    |
 | [**spatstat**](https://spatstat.org/)                                       | which has a wide range of useful functions for point pattern analysis. In this hands-on exercise, it will be used to perform 1st- and 2nd-order spatial point patterns analysis and derive kernel density estimation (KDE) layer. |
 | [**raster**](https://cran.r-project.org/web/packages/raster/)               | which reads, writes, manipulates, analyses and model of gridded spatial data (i.e. raster). In this hands-on exercise, it will be used to convert image output generate by spatstat into raster format.                           |
 | [**maptools**](https://cran.r-project.org/web/packages/maptools/index.html) | which provides a set of tools for manipulating geographic data. In this hands-on exercise, we mainly use it to convert *Spatial* objects into *ppp* format of **spatstat**.                                                       |
 | [**tmap**](https://cran.r-project.org/web/packages/tmap/index.html)         | which provides functions for plotting cartographic quality static point patterns maps or interactive maps by using [leaflet](https://leafletjs.com/) API                                                                          |
-| dplyr                                                                       |                                                                                                                                                                                                                                   |
 
 I install and launch the packages using the code chunk below
 
 ```{r}
-pacman::p_load(sf, raster, spatstat, tmap, tidyverse, dplyr, devtools, sp)
+pacman::p_load(sf, raster, spatstat, tmap, tidyverse, dplyr, devtools, sp, tidyr, stringr, rvest, xml2)
 ```
 
 # 4.0 Spatial Data Wrangling
@@ -198,11 +197,32 @@ Now, we will use *as.ppp()* function of **spatstat** to convert the spatial data
 childcare_ppp <- as.ppp(st_coordinates(childcare_sf), st_bbox(childcare_sf))
 ```
 
+Using st_coordinates and st_bbox:
+
+```{r}
+#childcare_ppp_crds <- as.ppp(st_coordinates(childcare_sf), st_bbox(childcare_sf))
+```
+
 Plot ***childcare_ppp*** and examine the difference.
 
 ```{r}
-plot(childcare_ppp)
+
+#par(mfrow=c(1,2))
+#plot(childcare_ppp)
+#plot(childcare_ppp_crds)
 ```
+
+> Question to address:
+>
+> Why is there a difference in the data presented for childcare_ppp?
+>
+> Upon further exploration, using st_coordinates and the st_bbox limits the data extracted to that of the spatial data. We see that due the warning
+>
+> ```         
+>  only first attribute column is used for marks
+> ```
+>
+> , further processing of the data is needed as the Description Column actually embeds the data and needs parsing before it is usable.
 
 Summary statistics of created ppp object:
 
@@ -210,7 +230,90 @@ Summary statistics of created ppp object:
 summary(childcare_ppp)
 ```
 
+```{r}
+#summary(childcare_ppp_crds)
+```
+
 **Warning: (Regarding duplicates)** In spatial point patterns analysis an issue of significant is the presence of duplicates. The statistical methodology used for spatial point patterns processes is based largely on the assumption that process are *simple*, that is, that the points cannot be coincident.
+
+### 5.3.1 Parsing HTML to make the data more readable
+
+```{r}
+glimpse(childcare_sf)
+```
+
+Here, we will process the HTML string per column
+
+```{r}
+clean_html <- function(html_content){
+  parsed_html <- read_html(html_content)
+  rows <- parsed_html %>% 
+    html_nodes("tr")
+  
+  headers <- c()
+  data <- c()
+  
+  for (row in rows){
+    row_headers <- row %>% html_nodes("th") %>% html_text(trim = TRUE)
+    row_data <- row %>% html_nodes("td") %>%  html_text(trim = TRUE)
+    
+    if (length(row_headers) > 0){
+      headers <- c(headers, row_headers)
+    }
+    
+    if (length(row_data) > 0){
+      data <- c(data, row_data)
+    }
+  }
+  
+  table_df <- data.frame(
+    Header = rep(headers, length.out = length(data)),
+    Data = data, 
+    stringsAsFactors = FALSE
+  )
+  
+  table_df$Data <- ifelse(table_df$Data == "", NA, table_df$Data)
+  
+  cleaned_data <- table_df %>% 
+    tidyr::pivot_wider(names_from = Header, values_from = Data, values_fill = list(Data = NA))
+  
+  return(cleaned_data)
+}
+
+childcare_sf_clean <- childcare_sf %>% 
+  rowwise() %>% 
+  mutate(Cleaned_Description = list(clean_html(Description))) %>% 
+  unnest(Cleaned_Description) %>% 
+  ungroup()
+
+#Remove redundant attributes row, redundant Description Row with HTML string
+childcare_sf_cleaned <- childcare_sf_clean %>% select(-Attributes) %>% 
+  select(-Description)
+
+colnames(childcare_sf_cleaned)[3:(ncol(childcare_sf_cleaned)-3)] <- colnames(childcare_sf_cleaned)[4:ncol(childcare_sf_cleaned)]
+
+childcare_sf_cleaned <- childcare_sf_cleaned[, 1:(ncol(childcare_sf_cleaned))]
+```
+
+```{r}
+str(childcare_sf_cleaned)
+```
+
+From the structure of the childcare_sf_cleaned(), we can further improve how the data is shown by renaming the first column to KML_ID, and shifting the 'Name' Column to the second column, to accurately reflect the information in the data. In the code above we've removed 'ADDRESSBLOCKHOUSENUMBER' , so we will add it back in its respective position.
+
+```{r}
+names(childcare_sf_cleaned)[1] <- "kml_id"
+
+childcare_sf_cleaned <- childcare_sf_cleaned[, c(1, 11, 2:10, 12:ncol(childcare_sf_cleaned))]
+
+childcare_sf_cleaned$ADDRESSBLOCKHOUSENUMBER <- NA 
+
+childcare_sf_cleaned <- childcare_sf_cleaned[, c(1:3, ncol(childcare_sf_cleaned), 4:(ncol(childcare_sf_cleaned)-1))]
+```
+
+```{r}
+head(childcare_sf_cleaned)
+```
 
 ## 5.4 Handling duplicated points
 
@@ -250,7 +353,7 @@ tmap_mode('plot')
 ### 5.4.1 How to spot the duplicate points from the map shown
 
 | Method              | Description                                                                                         | Possible Challenges             |
-|------------------|---------------------------|---------------------------|
+|---------------|------------------------------------------|---------------|
 | Deleting Duplicates | Filtering the duplicates and deleting them from the dataset                                         | Some useful points will be lost |
 | Jittering           | Add a small perturbation to the duplicate points so that they do not occupy the exact same space    |                                 |
 | Marks               | Make each point 'unique' and then attach the duplicates of the points to the patterns as **marks.** |                                 |
@@ -732,15 +835,15 @@ clarkevans.test(childcare_tm_ppp,
                 nsim=999)
 ```
 
-# 2nd Order Spatial Point Patterns Analysis 
+# 2nd Order Spatial Point Patterns Analysis
 
-# 9.0 Analysing Spatial Point Process Using G-Function 
+# 9.0 Analysing Spatial Point Process Using G-Function
 
 The G function measures the distribution of the distances from an arbitrary event to its nearest event. In this section, you will learn how to compute G-function estimation by using [*Gest()*](https://rdrr.io/cran/spatstat/man/Gest.html) of **spatstat** package. You will also learn how to perform monta carlo simulation test using [*envelope()*](https://rdrr.io/cran/spatstat/man/envelope.html) of **spatstat** package.
 
-## 9.1 Choa Chu Kang Planning 
+## 9.1 Choa Chu Kang Planning
 
-### 9.1.1 Computing G-function estimation 
+### 9.1.1 Computing G-function estimation
 
 The code chunk below is used to compute G-function using *Gest()* of **spatat** package.
 
@@ -771,7 +874,7 @@ plot(G_CK.csr)
 
 ## 9.2 Tampines Planning Area
 
-### 9.2.1 Computing G-function estimation 
+### 9.2.1 Computing G-function estimation
 
 ```{r}
 G_TM <- Gest(childcare_tm_ppp, correction="best")
@@ -798,7 +901,7 @@ G_TM.csr <- envelope(childcare_tm_ppp, Gest, correction="all", nsim=999)
 plot(G_TM.csr)
 ```
 
-# 10.0 Analysing Spatial Point Process Using F-Function 
+# 10.0 Analysing Spatial Point Process Using F-Function
 
 The F function estimates the empty space function F(r) or its hazard rate h(r) from a point pattern in a window of arbitrary shape. In this section, you will learn how to compute F-function estimation by using [*Fest()*](https://rdrr.io/cran/spatstat/man/Fest.html) of **spatstat** package.
 
@@ -806,14 +909,14 @@ The F function estimates the empty space function F(r) or its hazard rate h(r) f
 
 The code chunk below is used to compute F-function using *Fest()* of **spatat** package.
 
-### 10.1.1 Computing F-function Estimation 
+### 10.1.1 Computing F-function Estimation
 
 ```{r}
 F_CK <- Fest(childcare_ck_ppp)
 plot(F_CK)
 ```
 
-### 10.1.2 Performing Complete Spatial Randomness Test 
+### 10.1.2 Performing Complete Spatial Randomness Test
 
 To confirm the observed spatial patterns above, a hypothesis test will be conducted. The hypothesis and test are as follows:
 
@@ -837,7 +940,7 @@ plot(F_CK.csr)
 
 ## 10.2 Tampines Planning Area
 
-### 10.2.1 Computing F-function Estimation 
+### 10.2.1 Computing F-function Estimation
 
 Monte Carlo test with F-function:
 
@@ -866,20 +969,20 @@ F_TM.csr <- envelope(childcare_tm_ppp, Fest, correction="all", nsim=999)
 plot(F_TM.csr)
 ```
 
-# 11.0 Analysing Spatial Point Process Using K-Function 
+# 11.0 Analysing Spatial Point Process Using K-Function
 
 K-function measures the number of events found up to a given distance of any particular event. In this section, you will learn how to compute K-function estimates by using [*Kest()*](https://rdrr.io/cran/spatstat/man/Kest.html) of **spatstat** package.
 
 ## 11.1 Choa Chu Kang Planning Area
 
-### 11.1.1 Computing K-function Estimation 
+### 11.1.1 Computing K-function Estimation
 
 ```{r}
 K_CK <- Kest(childcare_ck_ppp, correction = "Ripley")
 plot(K_CK, . -r ~ r, ylab= "K(d)-r", xlab = "d(m)")
 ```
 
-### 10.1.2 Performing Complete Spatial Randomness Test 
+### 10.1.2 Performing Complete Spatial Randomness Test
 
 To confirm the observed spatial patterns above, a hypothesis test will be conducted. The hypothesis and test are as follows:
 
@@ -901,14 +1004,14 @@ plot(K_CK, . -r ~r, xlab="d", ylab="K(d)-r")
 
 ## 11.2 Tampines Planning Area
 
-### 11.2.1 Computing K-function Estimation 
+### 11.2.1 Computing K-function Estimation
 
 ```{r}
 K_TM <- Kest(childcare_tm_ppp, correction="Ripley")
 plot(K_TM, . -r ~ r, xlab="d(m)", ylab="K(d)-r",xlim=c(0,1000))
 ```
 
-### 11.2.2 Performing Complete Spatial Randomness Test 
+### 11.2.2 Performing Complete Spatial Randomness Test
 
 To confirm the observed spatial patterns above, a hypothesis test will be conducted. The hypothesis and test are as follows:
 
@@ -928,20 +1031,20 @@ K_TM.csr <- envelope(childcare_tm_ppp, Kest, nsim=99, rank=1, glocal=TRUE)
 plot(K_TM.csr, . - r ~ r, xlab="d", ylab="K(d)-r", xlim=c(0,500))
 ```
 
-# 12.0 Analysing Spatial Point Process Using L-Function 
+# 12.0 Analysing Spatial Point Process Using L-Function
 
 In this section, you will learn how to compute L-function estimation by using [*Lest()*](https://rdrr.io/cran/spatstat/man/Lest.html) of **spatstat** package.
 
 ## 12.1 Choa Chu Kang Planning Area
 
-### 12.1.1 Computing L-function Estimation 
+### 12.1.1 Computing L-function Estimation
 
 ```{r}
 L_CK <- Lest(childcare_ck_ppp, correction="Ripley")
 plot(L_CK, . -r ~ r, ylab= "L(d)-r", xlab = "d(m)")
 ```
 
-### 12.1.2 Performing Complete Spatial Randomness Test 
+### 12.1.2 Performing Complete Spatial Randomness Test
 
 To confirm the observed spatial patterns above, a hypothesis test will be conducted. The hypothesis and test are as follows:
 
@@ -963,14 +1066,14 @@ plot(L_CK.csr, . - r ~ r, xlab="d", ylab="L(d)-r")
 
 ## 12.2 Tampines Planning Area
 
-### 12.2.1 Computing L-function Estimation 
+### 12.2.1 Computing L-function Estimation
 
 ```{r}
 L_TM <- Lest(childcare_tm_ppp, correction="Ripley")
 plot(L_TM, .-r~r, ylab= "L(d)-r", xlab = "d(m)", xlim=c(0,1000))
 ```
 
-### 12.2.2 Performing Complete Spatial Randomness Test 
+### 12.2.2 Performing Complete Spatial Randomness Test
 
 To confirm the observed spatial patterns above, a hypothesis test will be conducted. The hypothesis and test are as follows:
 
