--- a/In-Class_Exercise/InClassEx04/InClassEx04.qmd
+++ b/In-Class_Exercise/InClassEx04/InClassEx04.qmd
@@ -24,7 +24,7 @@ They are:
 7.  lubridate
 
 ```{r}
-pacman::p_load(sf,raster,spatstat, sparr,tmap,tidyverse,readr)
+pacman::p_load(sf,raster,spatstat,sparr,tmap,tidyverse,readr, dplyr)
 ```
 
 # 2.0 Importing and Preparing Study Area
@@ -59,7 +59,7 @@ Looking further into the dataset, we notice that the coordinates have Polygon Z 
 kbb_sf <- st_read(dsn = "data/rawdata/", layer = "Kepulauan_Bangka_Belitung") %>% 
   st_union() %>% 
   st_zm(drop = TRUE, what="ZM") %>% 
-  st_transform(crs = 32748)
+  st_transform(crs=32748)
 ```
 
 ## 2.2 Convergint to owin object
@@ -77,7 +77,7 @@ Next, `class()` is used to confim if the output is indeed an owin object
 class(kbb_owin)
 ```
 
-# 3.0 Importing and Preparing Forest Fire Data 
+# 3.0 Importing and Preparing Forest Fire Data
 
 Next, we will import the forest fire data set into the R environment
 
@@ -86,8 +86,12 @@ Next, we will import the forest fire data set into the R environment
 ```{r}
 fire_sf <- read_csv("data/rawdata/forestfires.csv") %>% 
   st_as_sf(coords = c("longitude", "latitude"),
-           crs = 4326 ) %>% 
-  st_transform(csr = 32748)
+           crs=4326 ) %>% 
+  st_transform(crs=32748)
+```
+
+```{r}
+st_crs(fire_sf)
 ```
 
 Because **ppp** object only accepts numerical aor character as mark. The code chunk below is used to convert data type of acq_date to numeric.
@@ -101,9 +105,9 @@ fire_sf <- fire_sf %>%
          abbr = FALSE))
 ```
 
-# 4.0 Visualizing the Fire Points 
+# 4.0 Visualizing the Fire Points
 
-## 4.1 Overall Plot 
+## 4.1 Overall Plot
 
 ```{r}
 tmap_mode('plot')
@@ -116,7 +120,7 @@ tm_shape(kbb_sf) +
 tm_grid(alpha = 0.2)
 ```
 
-## 4.2 Visualizing Geographic Distribution of Forest Fires by Month 
+## 4.2 Visualizing Geographic Distribution of Forest Fires by Month
 
 ```{r}
 tmap_mode('plot')
@@ -131,18 +135,78 @@ tm_shape(kbb_sf) +
             drop.units=TRUE)
 ```
 
-# 5.0 Computing STKDE By Month 
+# 5.0 Computing STKDE By Month
 
-We will compute STKDE by `spattemp.density()`
+We will compute STKDE by `spattemp.density()`.
 
-```{r}
+## 5.1 Extracting Forest fires by month
 
-```
-
-# 6.0  Computing STKDE By Day of Year
+The code chunk below is used to remofe the unwanted fields from fire_sf data.frame. This is because `as.ppp()` only need the mark field and geometry field from the input sf data.frame
 
 ```{r}
+fire_month <- fire_sf %>% 
+  select(Month_num)
 
+class(fire_month)
 ```
 
-# 7.0 Computing STKDE By Month 
+## 5.2 Creating ppp
+
+The code chunk below is used to derive a ppp obect called fire_month from fire_month sf data.frame
+
+```{r}
+fire_month_ppp <- as.ppp(st_coordinates(fire_sf), W= kbb_owin)
+marks(fire_month_ppp) <- fire_sf$DayofYear
+```
+
+```{r}
+st_crs(kbb_sf)
+st_crs(fire_sf)
+```
+
+The code chunk is used to check the output is in the correct object class:
+
+```{r}
+summary(fire_month_ppp)
+```
+
+In the code chunk below, we check for duplicates.
+
+```{r}
+any(duplicated(fire_month_ppp))
+```
+
+## 5.3 Including Owin object
+
+```{r}
+fire_month_owin <- fire_month_ppp[kbb_owin]
+summary(fire_month_owin)
+```
+
+## 5.4 Computing Spatio-temporal KDE
+
+```{r}
+st_kde <- spattemp.density(fire_month_owin)
+summary(st_kde)
+```
+
+## 5.5 Plotting the spatio-temporal KDE Object
+
+In the code chunk below, `plot()` of R base is used to the KDE for between July 2023 - December 2023.
+
+```{r, fig.width=12, fig.height=10}
+
+# Define the months you want to plot (July to December)
+tims <- c(7,8,9,10,11,12)  
+
+for (i in tims){
+  kde_values <- st_kde$z[[i]]$v
+  
+  image(kde_values,
+        main=paste("KDE at month", i))
+}
+```
+
+# 6.0 Computing STKDE By Day of Year
+
+# 7.0 Computing STKDE By Month
